<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@android:string/no"
        android:src="@drawable/logo">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_are_you"
        android:layout_marginTop="260dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@android:color/background_dark">

    </TextView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/captain"
        android:textSize="22sp"
        android:id="@+id/captain"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:background="@android:color/holo_orange_light"
        >

    </Button>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:textSize="22sp"
        android:id="@+id/customer"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:background="@android:color/holo_orange_light">

    </Button>

</RelativeLayout>

</ScrollView>